--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -23,7 +23,7 @@
     <header class="container">
       <div class="conwrap">
         <div class="logo">
-          <img src="/logo/funders.jpg" alt="logo" width="50px" />
+          <img src="./logo/funders.jpg" alt="logo" width="50px" />
         </div>
 
         <nav class="left-link">
@@ -58,7 +58,7 @@
           <h1>I'm a Web <span>Developer</span></h1>
         </div>
         <div class="img-float-left">
-          <img src="/imgdisplay.jpg" alt="my image" width="50%" />
+          <img src="./imgdisplay.jpg" alt="my image" width="50%" />
         </div>
 
         <article>
@@ -74,7 +74,7 @@
 
       <div class="about">
         <div class="about-img-wrap">
-          <img src="/imgdisplay.jpg" alt="image" class="img" />
+          <img src="./imgdisplay.jpg" alt="image" class="img" />
         </div>
         <div class="about-wrap">
           <h2>About <span>me</span></h2>
@@ -91,13 +91,13 @@
 
           <div class="logotop">
             <a href=""
-              ><img src="/logo/linkedln.jpg" alt="linkedln logo" width="20px"
+              ><img src="./logo/linkedln.jpg" alt="linkedln logo" width="20px"
             /></a>
             <a href=""
-              ><img src="/logo/email.jpg" alt="email logo" width="20px"
+              ><img src="./logo/email.jpg" alt="email logo" width="20px"
             /></a>
             <a href=""
-              ><img src="/logo/insta.jpg" alt="instagram logo" width="19px"
+              ><img src="./logo/insta.jpg" alt="instagram logo" width="19px"
             /></a>
           </div>
         </div>
@@ -111,7 +111,7 @@
           <p>All your digital needs...Covered.</p>
         </div>
         <div class="footer-box1" id="first">
-          <img src="/logo/comp.jpg" alt="computer logo" width="10%" />
+          <img src="./logo/comp.jpg" alt="computer logo" width="10%" />
           <h2>Graphic Design</h2>
           <p>
             These values, corresponding to their respective colors, are
@@ -119,7 +119,7 @@
           </p>
         </div>
         <div class="footer-box1" id="second">
-          <img src="/logo/web.jpg" alt="www logo" width="10%" />
+          <img src="./logo/web.jpg" alt="www logo" width="10%" />
           <h2>Web Development</h2>
           <p>
             These values, corresponding to their respective colors, are
@@ -127,7 +127,7 @@
           </p>
         </div>
         <div class="footer-box1" id="last">
-          <img src="/logo/chat.jpg" alt="contact logo" width="10%" />
+          <img src="./logo/chat.jpg" alt="contact logo" width="10%" />
           <h2>Content writing</h2>
           <p>
             These values, corresponding to their respective colors, are
@@ -139,13 +139,13 @@
       <center>
         <div class="logofooter">
           <a href=""
-            ><img src="/logo/linkedln.jpg" alt="linkedln logo" width="30px"
+            ><img src="./logo/linkedln.jpg" alt="linkedln logo" width="30px"
           /></a>
           <a href=""
             ><img src="/logo/email.jpg" alt="email logo" width="30px"
           /></a>
           <a href=""
-            ><img src="/logo/insta.jpg" alt="instagram logo" width="29px"
+            ><img src="./logo/insta.jpg" alt="instagram logo" width="29px"
           /></a>
         </div>
       </center>
