--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
           </p>
 
           <div class="logotop">
-            <a href=""
+            <a href="#"
               ><img src="./logo/linkedln.jpg" alt="linkedln logo" width="20px"
             /></a>
-            <a href=""
+            <a href="#"
               ><img src="./logo/email.jpg" alt="email logo" width="20px"
             /></a>
-            <a href=""
+            <a href="#"
               ><img src="./logo/insta.jpg" alt="instagram logo" width="19px"
             /></a>
           </div>
@@ -138,13 +138,13 @@
 
       <center>
         <div class="logofooter">
-          <a href=""
+          <a href="#"
             ><img src="./logo/linkedln.jpg" alt="linkedln logo" width="30px"
           /></a>
-          <a href=""
+          <a href="#"
             ><img src="/logo/email.jpg" alt="email logo" width="30px"
           /></a>
-          <a href=""
+          <a href="#"
             ><img src="./logo/insta.jpg" alt="instagram logo" width="29px"
           /></a>
         </div>
